解决elemment打包报错

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "skipLibCheck": true, //第三方包不进行检查
     "lib": ["esnext", "dom"],
     "baseUrl": "./",
     "paths": {
